# app.js
@@ -3,10 +3,12 @@ const express = require('express');
 const path = require('path');
 const cookieParser = require('cookie-parser');
 const logger = require('morgan');
-const epilogue = require('epilogue');
-const database = require('./models/index').sequelize;
+const swaggerUi = require('swagger-ui-express');
+const YAML = require('yamljs');
 const indexRouter = require('./routes/index');
 const usersRouter = require('./routes/users');
+
+const swaggerDocument = YAML.load('./swagger/swagger.yml');
 
 const app = express();
 
@@ -20,13 +22,10 @@ app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, 'public')));
 
-epilogue.initialize({
-  app,
-  sequelize: database,
-});
-
 app.use('/', indexRouter);
-app.use('/users', usersRouter);
+
+// Swagger API
+app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument, true));
 
 // catch 404 and forward to error handler
 app.use((req, res, next) => {
@@ -34,7 +33,7 @@ app.use((req, res, next) => {
 });
 
 // error handler
-app.use((err, req, res, next) => {
+app.use((err, req, res) => {
   // set locals, only providing error in development
   res.locals.message = err.message;
   res.locals.error = req.app.get('env') === 'development' ? err : {};
@@ -42,12 +41,6 @@ app.use((err, req, res, next) => {
   // render the error page
   res.status(err.status || 500);
   res.render('error');
-});
-
-database.sequelize.sync({
-  force: true,
-}).then(() => {
-  console.log('Database Created....');
 });
 
 module.exports = app;
