# controller/userController.js
@@ -1,6 +1,16 @@
-const userResource = require('../epilogue/initResource');
+const db = require('../models/index');
+const userModel = require('../models/user')(db.sequelize, db.Sequelize);
 
 module.exports.create = (req, res) => {
-  userResource.controllers.create({ firstName: req.firstName, lastName: req.lastName, email: req.email });
-  res
+  const body = req.body;
+  db.sequelize.sync()
+    .then(() => userModel.create({
+      firstName: body.firstName,
+      lastName: body.lastName,
+      email: body.email,
+    }))
+    .then((result) => {
+      console.log(result.toJSON());
+      res.status(200).send('Done');
+    });
 };
